--- a/index.html
+++ b/index.html
@@ -8,25 +8,35 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <div id="logo"><img src="./assets/images/ieee_ssit.png"></div>
-    <div class="form">
-        <h3>LOGIN HERE</h3><br>
-        <label id="username">Username</label><br>
-        <input type="text" placeholder="Username"><br><br>
-        <label id="password">Password</label><br>
-        <input type="password" placeholder="Password"><br><br>
-        <button id="submit">Submit</button>
+    <div class="main">
+        <div id="div1">
+        <div id="logo">
+            <img src="./assets/images/ieee_ssit_software.png">
+        </div>
     </div>
-    <div id="footer">
-        <p>IEEE-SSIT  
+    <div id="div3">
+        <div class="form">
+            <h3>LOGIN HERE</h3><br>
+            <label id="username">Username</label><br>
+            <input type="text" placeholder="Username"><br><br>
+            <label id="password">Password</label><br>
+            <input type="password" placeholder="Password"><br><br>
+            <button id="submit">Submit</button>
+        </div>
+    </div>
+    <div id="div3">
+        <div id="footer">
+            <p>IEEE-SSIT  
             <p style="background: -webkit-linear-gradient(rgb(187, 189, 197), rgb(32, 1, 90));
             -webkit-text-fill-color: transparent; 
             -webkit-background-clip: text; 
             font-weight: bold; 
-            font-family:Brush Script MT, Brush Script Std, cursive; 
+            font-family: Brush Script MT, Brush Script Std, cursive; 
             font-size: 20px;">Software</p>
             PORTAL</p>
+        </div>
     </div>
-
+</div>
+    
 </body>
 </html>
