--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
     <div id="div3">
         <div id="footer">
             <p>IEEE-SSIT  
-            <p style="background: -webkit-linear-gradient(rgb(187, 189, 197), rgb(32, 1, 90));
+            <p style="background: -webkit-linear-gradient(rgb(255, 255, 255), rgb(86, 0, 247));
             -webkit-text-fill-color: transparent; 
             -webkit-background-clip: text; 
             font-weight: bold; 
             font-family: Brush Script MT, Brush Script Std, cursive; 
-            font-size: 20px;">Software</p>
+            font-size: 20px;" id="software">Software</p>
             PORTAL</p>
         </div>
     </div>
